# swe-lab8

./: .env.example  docker-compose.yaml  shell.nix  sonar-project.properties
consumer/: .gitignore  README.md  pyproject.toml
consumer/app/: main.py
consumer/app/cashback/application/: kafka_listener.py  router.py
consumer/app/cashback/domain/: cashback_info.py  cashback_repository.py  cashback_service.py  domain_cashback_service.py
consumer/app/cashback/infrastructure/: cashback_info_mapper.py  cashback_info_model.py  impl_config.py  sql_cashback_repository.py
consumer/app/common/: funcs.py
consumer/app/config/: db_engine.py  kafka.py
consumer/app/orders/domain/: order_info.py
consumer/tests/: conftest.py  test_cashback_info.py  test_cashback_info_mapper.py  test_common_logger.py  test_config_db_engine.py  test_config_kafka.py  test_domain_cashback_service.py  test_impl_config.py  test_kafka_listener.py  test_main.py  test_router.py  test_sql_cashback_repository.py
producer/: pyproject.toml
producer/app/: main.py
producer/app/config/: db_engine.py  kafka.py
producer/app/orders/application/: kafka_service.py  router.py
producer/app/orders/domain/: order_repository.py  order_service.py
producer/app/orders/infrastructure/: impl_config.py  order_info_mapper.py  order_info_model.py  sql_order_repository.py
producer/tests/: conftest.py  test_config_kafka.py  test_funcs.py  test_impl_config.py  test_kafka_service.py  test_order_info.py  test_order_info_mapper.py  test_router.py  test_sql_order_repository.py
