[project]
name = "producer"
version = "0.1.0"
description = "producer service - CS3081 homework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.14.0",
    "fastapi[standard]>=0.136.3",
    "sqlmodel>=0.0.38",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=xml:coverage.xml --cov-report=term"
